@@ -1,3 +1,8 @@
+2008-06-29  Laurent Debacker <debackerl@gmail.com> 
+
+	* ApplicationMenuItem.cs: Text align fix, and delayed menu opening.
+	* ApplicationMenu.cs: One hard-coded value removed
+
 2008-06-28  Laurent Debacker <debackerl@gmail.com> 
 
 	* Theme.cs: More compliant app menu background, and new feature for buttons:
